# Oscilloscope_DIMServer

./: .gitignore  gui_zmq.py  headless_zmq.py  no_server.py  readMe.md
config/: config_template.json  connection_config_template.json  driver_profile_template.json  osc_config_template.json
dim_server/: CMakeLists.txt  servicesGuide.md  zmq_test.py
dim_server/include/: CommandHandlers.h  CommandRegistry.h  Constants.h  DimServices.h  ZMQCommunicator.h
dim_server/src/: CommandHandlers.cpp  CommandRegistry.cpp  DimServices.cpp  ZMQCommunicator.cpp  main.cxx  test_server.cxx
zmq_server/: cont_acq.py  gui.py  headless.py  requirements.txt  server.py  test.py
zmq_server/common/: constants.py  driver_map.py  exepction.py  utils.py
zmq_server/drivers/: AbstractInterfaces.py  TDS3054C.py
zmq_server/drivers/profiles/: TDS3054C_profile.json
zmq_server/gui/: dashboard.py  gui_backend.py  panels.py  simple_gui.py  widgets.py
zmq_server/manager/: backend.py  device_manager.py  measurement_manager.py  zmq_manager.py
zmq_server/server/: backend.py  gui_backend.py  zmq_manager.py
